Added email sending

--- a/src/main/resources/appSettings.properties
+++ b/src/main/resources/appSettings.properties
@@ -40,6 +40,12 @@ linux.image.upload.change.ownership=false
 # SMS API send sms link
 sms.url=http://google.com?userid={0}&smscode={1}
 
+# Email settings
+smtp.host=<put smtp host here>
+smtp.port=<put smtp port here>
+smtp.username=<put smtp username email here>
+smtp.password=<put smtp password here>
+
 ########################################################################################################################
 #                                                ACKNOWLEDGEMENT                                                       #
 ########################################################################################################################
