--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -1,6 +1,8 @@
 # [ConstraintName].[ClassName].[FieldName]=[Message]
 
 NotEmpty.user.contactNo=Contact no. is required
+NotEmpty.user.email=Email is required
+Email.user.email=Invalid email address
 NotEmpty.user.firstName=First name is required
 NotNull.user.nidOrPassportNo=NID or passport no. is required
 NotEmpty.user.password=Password is required
@@ -13,6 +15,7 @@ NotNull.user.website=Website is required
 
 NotEmpty.vendor.name=Name is required
 NotEmpty.vendor.contactNo=Contact no. is required
+Email.vendor.email=Invalid email address
 NotNull.vendor.roleId=Role is required
 NotEmpty.vendor.password=Password is required
 NotNull.vendor.location=Location is required
